Fixed hero to align with Figma

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700&family=Plus+Jakarta+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@300;700&family=Plus+Jakarta+Sans:wght@500;600&display=swap");
 
 /* CSS Reset */
 * {
@@ -9,7 +9,7 @@
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
@@ -160,6 +160,7 @@ button {
 #hero {
   position: relative;
   overflow: hidden;
+  height: 788px;
 }
 
 #nav {
@@ -188,10 +189,23 @@ button {
   width: auto;
 }
 
+#gradient {
+  position: absolute;
+  top: 0;
+  height: 214px;
+  width: 100%;
+  background: linear-gradient(
+    180deg,
+    #ffffff 0.5%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  z-index: 29;
+}
+
 #tagline {
   position: fixed;
   z-index: 30;
-  top: 6rem /* 24px */;
+  top: 188px;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -203,13 +217,8 @@ button {
   justify-content: center;
   align-items: center;
   z-index: 20;
-  width: 100%;
-  height: auto;
-}
-
-#sky img {
-  width: 100%;
-  height: auto;
+  height: 862px;
+  object-fit: cover;
 }
 
 #grass {
@@ -219,6 +228,8 @@ button {
   bottom: 0;
   left: 0;
   z-index: 40;
+  height: 60%;
+  object-fit: cover;
 }
 
 #contact-button {
@@ -427,12 +438,6 @@ button {
 }
 
 .nav {
-  font-family: var(--fontfamilyParagraph);
-  font-size: var(--fontsizeParagraph18);
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  text-align: left;
   padding-top: 0.5rem /* 12px */;
   padding-bottom: 0.5rem /* 12px */;
   padding-left: 0.75rem /* 64px */;
